--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <div class="container">
 <div class="destination-container">
 <div class="destination" id="florida">
+
 <h2>Elalia</h2>
 </div>
 
 <div class="destination" id="paris">
-<h2>Paris</h2>
+<h2>Ouargla</h2>
 </div>
 </div>
 </div>
